--- a/src/argentina.html
+++ b/src/argentina.html
@@ -26,7 +26,7 @@
     <title>Argentina</title>
   </head>
 
-  <body class="p-3">
+  <body>
     <!--nav bar-->
     <nav class="nav-header">
       <div
