--- a/src/argentina.html
+++ b/src/argentina.html
@@ -40,7 +40,7 @@
           aria-controls="staticBackdrop"
         >
           <img
-            src="img/japan/bucket.png"
+            src="img/main/bucket.png"
             alt="bucket image"
             style="width: 70px; height: 100px; object-fit: cover"
           />
