--- a/src/france.html
+++ b/src/france.html
@@ -12,6 +12,7 @@ crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/france.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="home.component.css" />
+<link rel="stylesheet" href="css/img_carousel_slider.css"/>
  
 
 
@@ -334,37 +335,29 @@ crossorigin="anonymous"></script>
                                                 class="btn btn-outline-success w-100">Add City to Bucket
                                                 List</button>
                                         </div>
-
-<!-- image carousel -->
- <div class="slider">
-    <div class="list">
-        <div class="item">
-            <img src="img/argentina/buenos-aires/BA1.jpeg" /> 
+<!-- Image Carousel -->
+<div id="carouselExample" class="carousel slide" style="padding-bottom: 4%;">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/argentina/buenos-aires/BA1.jpeg" class="d-block w-100 fixed-size-img">
         </div>
-        <div class="item">
-            <img src="img/argentina/mendoza/Mendoza2.jpeg" />
+        <div class="carousel-item">
+            <img src="img/argentina/buenos-aires/BA2.png" class="d-block w-100 fixed-size-img">
         </div>
-        <div class="item">
-            <img src="img/france/paris/paris.jpeg" />
+        <div class="carousel-item">
+            <img src="img/argentina/buenos-aires/BA3.png" class="d-block w-100 fixed-size-img">
         </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 
-    <!-- button prev and nect-->
-    <div class="buttons">
-        <button id="prev"><</button>
-        <button id="next">></button>
-    </div>
-
-    <!-- dots (if 5 items => 5 dots)-->
-     <ul class="dots">
-        <li class="active"></li>
-        <li></li>
-        <li></li>
-     </ul>
- </div>
-
-<!-- script for carousel -->
-<script src="js/img_carousel.js"></script>
 
 
                                         <!-- This is the main accordion for each city's information -->
@@ -383,11 +376,7 @@ crossorigin="anonymous"></script>
                                                     data-bs-parent="#MainAccordion">
                                                     <div class="accordion-body">
                                                         Top Spots items will be listed here.
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="accordion-item">
-                                                <h2 class="accordion-header">
+                                          <h2 class="accordion-header">
                                                     <button class="accordion-button collapsed"
                                                         type="button" data-bs-toggle="collapse"
                                                         data-bs-target="#PlacesToEat"
@@ -425,12 +414,13 @@ crossorigin="anonymous"></script>
                                 </div>
                             </div>
 
+
                             <!-- This is the offCanvas for Buenos-Aires. -->
                             <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1"
-                                id="Amsterdam" aria-labelledby="AmsterdamOffCanvas">
+                                id="Mendoza" aria-labelledby="AmsterdamOffCanvas">
                                 <div class="offcanvas-header">
-                                    <h5 class="offcanvas-title" id="AmsterdamOffCanvas">Amsterdam,
-                                        Netherlands</h5>
+                                    <h5 class="offcanvas-title" id="AmsterdamOffCanvas">Mendoza,
+                                        Argentina</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                         aria-label="Close"></button>
                                 </div>
@@ -441,6 +431,31 @@ crossorigin="anonymous"></script>
                                         <button type="button" class="btn btn-outline-success w-100">Add
                                             City to Bucket List</button>
                                     </div>
+<!-- Image Carousel -->
+<div id="carouselExample" class="carousel slide" style="padding-bottom: 4%;">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/argentina/buenos-aires/BA1.jpeg" class="d-block w-100 fixed-size-img">
+            </div>
+        <div class="carousel-item">
+            <img src="img/argentina/buenos-aires/BA2.png" class="d-block w-100 fixed-size-img">
+            </div>
+        <div class="carousel-item">
+            <img src="img/argentina/buenos-aires/BA3.png" class="d-block w-100 fixed-size-img">
+            </div>
+        </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
 
                                     <!-- This is the main accordion for each city's information -->
                                     <div class="accordion w-100" id="MainAccordion">
