--- a/src/argentina.html
+++ b/src/argentina.html
@@ -23,7 +23,7 @@
     ></script>
     <link rel="stylesheet" href="css/argentina.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/main.js" defer></script>
+    <!-- <script type="module" src="js/main.js" defer></script> -->
     <script type="module" src="js/search_bar.js" defer></script>
     
     <title>Argentina</title>
