--- a/src/us.html
+++ b/src/us.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/main.js" defer></script>
+    <!-- <script type="module" src="js/main.js" defer></script> -->
     <script type="module" src="js/search_bar.js" defer></script>
     <title>Document</title>
   </head>
