--- a/src/argentina.html
+++ b/src/argentina.html
@@ -279,10 +279,10 @@
                 Places to Eat
               </button>
             </h2>
-            <div id="PlacesToEatList_1" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+            <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
               <div class="accordion-body nested-first">
                 <!-- This is the nested accordion for Places To Eat information -->
-                <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+                <div class="accordion accordion-flush w-100" id="PlacesToEatList_1">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -342,10 +342,10 @@
                 Lodging
               </button>
             </h2>
-            <div id="LodgingList_1" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+            <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
               <div class="accordion-body nested-first">
                 <!-- This is the nested accordion for Lodging information -->
-                <div class="accordion accordion-flush w-100" id="LodgingList">
+                <div class="accordion accordion-flush w-100" id="LodgingList_1">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -509,10 +509,10 @@
                 Places to Eat
               </button>
             </h2>
-            <div id="PlacesToEatList_2" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+            <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
               <div class="accordion-body nested-first">
                 <!-- This is the nested accordion for Places To Eat information -->
-                <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+                <div class="accordion accordion-flush w-100" id="PlacesToEatList_2">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -572,10 +572,10 @@
                 Lodging
               </button>
             </h2>
-            <div id="LodgingList_2" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+            <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
               <div class="accordion-body nested-first">
                 <!-- This is the nested accordion for Lodging information -->
-                <div class="accordion accordion-flush w-100" id="LodgingList">
+                <div class="accordion accordion-flush w-100" id="LodgingList_2">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
