--- a/src/morocco.html
+++ b/src/morocco.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- <script type="module" src="js/main.js" defer></script> -->
     <script type="module" src="js/search_bar.js" defer></script>
-    <title>Document</title>
+    <title>Morocco</title>
   </head>
 
   <body>
