--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,18 @@
 </head>
 
 <body>
-  <div class="bg-image" style="background-image: url('img/main/globe_design.jpg'); height: 100vh">
-    <div class="color-overlay d-flex justify-content-center align-items-center title_page_header">
+  <div class="color-overlay title_page_header">
+    <div class="video-container">
+      <video autoplay muted loop class="bg-image" style="height: 100vh">
+        <source src="earth.mp4" type="video/mp4">
+      </video>
       <div class="opening-greeting">
         <h1 id="greeting"></h1>
       </div>
-      <script src="js/greeting.js"></script>
-      <!--<h1>Pick Ur Place</h1>-->
     </div>
+  </div>
+  <script src="js/greeting.js"></script>
+  <!--<h1>Pick Ur Place</h1>-->
   </div>
   <button class="btn btn-primary" onclick="window.location.href='dropdowns.html';">
     Explore!
